<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.design.widget.TextInputEditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SEARCH_QUERY"
        />

    <TextView
        android:id="@+id/begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BEGIN_DATE"
        app:layout_constraintTop_toBottomOf="@+id/text_input"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox_technology"
        />



    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/END_DATE"
        app:layout_constraintTop_toBottomOf="@+id/text_input"
        app:layout_constraintLeft_toRightOf="@+id/begin_date"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox_food"
        />

    <CheckBox
        android:id="@+id/checkBox_technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckboxTechnology"
        app:layout_constraintLeft_toLeftOf="@+id/text_input"
        app:layout_constraintTop_toBottomOf="@+id/text_input"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"

         />

    <CheckBox
        android:id="@+id/checkBox_science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckboxScience"
        app:layout_constraintLeft_toLeftOf="@+id/text_input"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_technology"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"

         />

    <CheckBox
        android:id="@+id/checkBox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckboxSports"
        app:layout_constraintLeft_toLeftOf="@+id/text_input"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_science"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"

        />

    <CheckBox
        android:id="@+id/checkBox_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckboxFood"
        app:layout_constraintLeft_toLeftOf="@+id/text_input"
        app:layout_constraintTop_toBottomOf="@+id/text_input"
        android:layout_marginTop="70dp"
        android:layout_marginStart="200dp"
        />

    <CheckBox
        android:id="@+id/checkBox_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckboxTravel"
        app:layout_constraintLeft_toLeftOf="@+id/text_input"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_food"
        android:layout_marginTop="10dp"
        android:layout_marginStart="200dp"
        />

    <CheckBox
        android:id="@+id/checkBox_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckboxWorld"
        app:layout_constraintLeft_toLeftOf="@+id/text_input"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_travel"
        android:layout_marginTop="10dp"
        android:layout_marginStart="200dp"
        />

    <Button
        android:id="@+id/button_Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SEARCH_BUTTON"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_world"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/begin_date_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SELECT_DATE"
        app:layout_constraintTop_toBottomOf="@+id/begin_date"
        app:layout_constraintLeft_toLeftOf="@+id/begin_date"/>



    <TextView
        android:id="@+id/end_date_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SELECT_DATE"
        app:layout_constraintTop_toBottomOf="@+id/end_date"
        app:layout_constraintLeft_toLeftOf="@+id/end_date"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_Search"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>