<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BEGIN_DATE"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/begin_date_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SELECT_DATE"
        app:layout_constraintTop_toBottomOf="@id/begin_date"
        app:layout_constraintLeft_toLeftOf="@id/begin_date"/>

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/END_DATE"
        app:layout_constraintTop_toTopOf="@+id/begin_date"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="205dp"
        />

    <TextView
        android:id="@+id/end_date_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SELECT_DATE"
        app:layout_constraintTop_toBottomOf="@+id/end_date"
        app:layout_constraintLeft_toLeftOf="@id/end_date"
        />

</androidx.constraintlayout.widget.ConstraintLayout>